[gd_scene load_steps=10 format=2]

[ext_resource path="res://rooms/testing/TestGame.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/title_screen/title_screen.gd" type="Script" id=2]
[ext_resource path="res://ui/menus/options/OptionsMenu.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/menus/title/TitleMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/themes/default_theme.tres" type="Theme" id=5]
[ext_resource path="res://ui/menus/quit/QuitMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui/menus/options/audio/AudioOptionsMenu.tscn" type="PackedScene" id=7]
[ext_resource path="res://ui/menus/options/video/VideoOptionsMenu.tscn" type="PackedScene" id=8]
[ext_resource path="res://ui/menus/options/controller/ControllerOptionsMenu.tscn" type="PackedScene" id=9]

[node name="TitleScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
game = ExtResource( 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.113725, 0.129412, 0.176471, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MenuBackground" type="ColorRect" parent="."]
margin_left = 80.0
margin_right = 240.0
margin_bottom = 180.0
color = Color( 1, 1, 1, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleMenu" parent="MenuBackground" instance=ExtResource( 4 )]
visible = false

[node name="OptionsMenu" parent="MenuBackground" instance=ExtResource( 3 )]
visible = false

[node name="QuitMenu" parent="MenuBackground" instance=ExtResource( 6 )]
visible = false

[node name="AudioOptionsMenu" parent="MenuBackground" instance=ExtResource( 7 )]
visible = false

[node name="VideoOptionsMenu" parent="MenuBackground" instance=ExtResource( 8 )]
visible = false

[node name="ControllerOptionsMenu" parent="MenuBackground" instance=ExtResource( 9 )]
visible = false
